--- a/src/main/resources/static/productos.html
+++ b/src/main/resources/static/productos.html
@@ -373,7 +373,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <table class="table table-bordered" id="tablaProductos" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
                                             <th>Código</th>
@@ -384,15 +384,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>252</td>
-                                            <td>Cocina</td>
-                                            <td>Gafa</td>
-                                            <td>150000</td>
-                                            <td><a href="#" class="btn btn-danger btn-circle btn-sm">
-                                                <i class="fas fa-trash"></i>
-                                            </a></td>
-                                        </tr>
+
                                     </tbody>
                                 </table>
                             </div>
