Se agrego la opcion de agregar productos a la tabla

--- a/src/main/resources/static/productos.html
+++ b/src/main/resources/static/productos.html
@@ -113,7 +113,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Login Screens:</h6>
                         <a class="collapse-item" href="login.html">Login</a>
-                        <a class="collapse-item" href="register.html">Register</a>
+                        <a class="collapse-item" href="agregar_producto.html">Register</a>
                         <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">Other Pages:</h6>
@@ -365,7 +365,9 @@
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-2 text-gray-800">Productos</h1>
-
+                    <a href="agregar_producto.html" class="btn btn-primary btn-user btn-block">
+                        Agregar Producto
+                    </a>
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
