Se agrego la opcion de agregar productos a la tabla

--- a/src/main/resources/static/productos.html
+++ b/src/main/resources/static/productos.html
@@ -382,7 +382,8 @@
                                             <th>Descripción</th>
                                             <th>Marca</th>
                                             <th>Precio</th>
-                                            <th>Edición</th>
+                                            <th>Editar</th>
+                                            <th>Eliminar</th>
                                         </tr>
                                     </thead>
                                     <tbody>
